# MagentaPackages

./: .gitignore  README.md
.github/workflows/: release.yml  validate.yml
AutOmicScience/: README.md  package.toml
AutOmicScience/brand/: HcpServer.ts
AutOmicScience/brand/AutOmicScience/: AutOmicScience.brand.ts  HcpMagnet.ts  README.md
AutOmicScience/brands/AutOmicScience/: brand.toml
AutOmicScience/skills/bioml/: HcpServer.ts  SKILL.md
AutOmicScience/skills/bulk/: HcpServer.ts  SKILL.md
AutOmicScience/skills/cancer-dependency/: HcpServer.ts  SKILL.md
AutOmicScience/skills/cancer-genomics/: HcpServer.ts  SKILL.md
AutOmicScience/skills/clinical-survival/: HcpServer.ts  SKILL.md
AutOmicScience/skills/immune-repertoire/: HcpServer.ts  SKILL.md
AutOmicScience/skills/metabolomics/: HcpServer.ts  SKILL.md
AutOmicScience/skills/microbiome/: HcpServer.ts  SKILL.md
AutOmicScience/skills/omics-shared/: HcpServer.ts  SKILL.md
AutOmicScience/skills/phase-separation/: HcpServer.ts  SKILL.md
AutOmicScience/skills/proteomics/: HcpServer.ts  SKILL.md
AutOmicScience/skills/single-cell/: HcpServer.ts  SKILL.md
AutOmicScience/skills/spatial/: SKILL.md
AutOmicScience/skills/statistical-genetics/: HcpServer.ts  SKILL.md
AutOmicScience/system-prompt/: HcpServer.ts  system-prompt.toml
AutOmicScience/system-prompt/AutOmicScience/: HcpMagnet.ts  SYSTEM.md
AutOmicScience/tools/bio-api/: HcpServer.ts  bio-api.toml
AutOmicScience/tools/bio-api/rust/: .gitignore  Cargo.toml  VENDOR.md
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/: Cargo.toml  README.md  README_GWAS.md
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/examples/: batch_and_healing.rs  disgenet_example.rs  gwas_query.rs  string_debug.rs  verify_virus_e2e.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/src/: batch.rs  cache.rs  clients.rs  error.rs  lib.rs  models.rs  rate_limiter.rs  registry.rs  retry.rs  testing.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/src/clients/: alphafold.rs  archs4.rs  bgee.rs  biogrid.rs  blat.rs  cosmic.rs  diamond.rs  disgenet.rs  drugbank.rs  eightcube.rs  elm.rs  encode.rs  enrichr.rs  ensembl.rs  gnomad.rs  gtex.rs  gwas.rs  hpo.rs  interpro.rs  jaspar.rs  kegg.rs  monarch.rs  muscle.rs  ncbi_virus.rs  omim.rs  pdb.rs  pfam.rs  pride.rs  pubchem.rs  quickgo.rs  reactome.rs  regulomedb.rs  string.rs  uniprot.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/src/healing/: agent.rs  circuit.rs  classifier.rs  client.rs  mod.rs  repair.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/src/local/: diamond.rs  mod.rs  muscle.rs  mutate.rs  pairwise.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-apis/tests/: README.md  gwas_integration.rs  live_connectivity.rs  verify_claims.rs
AutOmicScience/tools/bio-api/rust/crates/aose-bio-mcp/: Cargo.toml
AutOmicScience/tools/bio-api/rust/crates/aose-bio-mcp/src/: bio_typed.rs  lib.rs
AutOmicScience/tools/bio-api/rust/crates/aose-core/: Cargo.toml
AutOmicScience/tools/bio-api/rust/crates/aose-core/src/: error.rs  lib.rs  tool.rs  trait_based_tool.rs  types.rs
AutOmicScience/tools/bio-api/rust/crates/aose-mcp/: Cargo.toml
AutOmicScience/tools/bio-api/rust/crates/aose-mcp/src/: lib.rs  server.rs
AutOmicScience/tools/bio-api/rust/crates/aose-schemas/: Cargo.toml
AutOmicScience/tools/bio-api/rust/crates/aose-schemas/src/: grounding.rs  lib.rs
AutOmicScience/tools/omics-compute/: HcpServer.ts
AutOmicScience/tools/omics-environment/: HcpServer.ts  pixi.toml
AutOmicScience/tools/omics-install/: HcpServer.ts
AutOmicScience/tools/omics-preflight/: HcpServer.ts
AutOmicScience/tools/visual-inspector/: Cargo.toml  README.md  analyze-plot.toml  compare-images.toml  test.sh  validate-render.toml
AutOmicScience/tools/visual-inspector/src/: analysis.rs  lib.rs  main.rs  screenshot.rs
Biomni/: README.md  package.toml
Biomni/scripts/: fetch_biomni_data.py
Biomni/skills/biomedical-tools/: HcpServer.ts  SKILL.md
Biomni/skills/sgrna-design/: HcpServer.ts
Biomni/skills/single-cell-annotation/: HcpServer.ts  SKILL.md
Cardiomni/: CLAUDE.md  PACKAGE_SUMMARY.md  README.md  package.toml  reference.md
Cardiomni/brand/Cardiomni/: Cardiomni.brand.ts  HcpMagnet.ts  README.md  brand.toml
Cardiomni/skills/diagnosis-analysis/: HcpServer.ts
Cardiomni/skills/evaluation-rubric/: HcpServer.ts
Cardiomni/skills/report-writing/: HcpServer.ts
Cardiomni/system-prompt/Cardiomni/: HcpMagnet.ts  SYSTEM.md  system-prompt.toml
Cardiomni/tools/cardio-api/: HcpServer.ts
Cardiomni/tools/cardio-environment/: HcpServer.ts  pyproject.toml
Cardiomni/tools/cardio-environment/Cardiomni/: HcpMagnet.ts  cardio-environment.toml
Cardiomni/tools/cardio-imaging-tools/: HcpServer.ts
ClaudeScience/: README.md  package.toml
ClaudeScience/skills/algorithmic-art/: HcpServer.ts
ClaudeScience/skills/alphafold2/: HcpServer.ts
ClaudeScience/skills/boltz/: HcpServer.ts
ClaudeScience/skills/borzoi/: HcpServer.ts
ClaudeScience/skills/chai1/: HcpServer.ts
ClaudeScience/skills/compute-env-setup/: HcpServer.ts
ClaudeScience/skills/customize/: HcpServer.ts
ClaudeScience/skills/diffdock/: HcpServer.ts
ClaudeScience/skills/esmfold2/: HcpServer.ts
ClaudeScience/skills/evo2/: HcpServer.ts
ClaudeScience/skills/fair-esm2/: HcpServer.ts
ClaudeScience/skills/figure-composer/: HcpServer.ts
ClaudeScience/skills/figure-style/: HcpServer.ts
ClaudeScience/skills/indication-dossier/: HcpServer.ts
ClaudeScience/skills/learn/: HcpServer.ts
ClaudeScience/skills/ligandmpnn/: HcpServer.ts
ClaudeScience/skills/literature-review/: HcpServer.ts
ClaudeScience/skills/openfold3/: HcpServer.ts
MagentaWithPantheonOS/: README.md  package.toml
PantheonOS/: README.md  package.toml
PantheonOS/skills/: README.md
PantheonOS/tests/: test_package.py
scripts/: build_release_artifact.py  package_version.py  test_build_release_artifact.py  test_validate_packages.py  test_workflow_security.py  validate_packages.py
templates/harness-package/: AGENT_GUIDE.md  README.md
(+485 files in other folders)
