[package]
name = "visual-inspector"
version = "0.1.0"
edition = "2021"
description = "Visual inspection and feedback for scientific plots"
license = "MIT"

[[bin]]
name = "visual-inspector"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["png", "jpeg", "bmp", "tiff"] }
imageproc = "0.25"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs"] }
tracing = "0.1"

[features]
default = ["screenshot"]
screenshot = []
