[project]
name = "cardio-environment"
version = "0.1.0"
description = "Python environment for Cardiomni cardiovascular imaging and clinical tools"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "pydicom>=2.3.0",
    "nibabel>=5.0.0",
    "SimpleITK>=2.2.0",
    "scipy>=1.10.0",
    "scikit-image>=0.20.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
imaging-extras = [
    "opencv-python>=4.7.0",
    "vtk>=9.2.0",
    "monai>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
