[package]
name = "aose-bio-apis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true
async-trait = "0.1"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Time handling
chrono.workspace = true

# Rate limiting
governor = "0.6"

# URL handling
url.workspace = true

# Tracing
tracing.workspace = true

# Caching (optional)
moka = { version = "0.12", features = ["future"], optional = true }

# FASTA parsing
bio = { version = "1.6", optional = true }

# Random number generation (for jitter)
rand = "0.8"

# URL encoding
urlencoding = "2.1"

# XML parsing for BLAST results
quick-xml = "0.36"

# CSV parsing
csv = "1.3"

# Base64 encoding for COSMIC auth
base64.workspace = true

# Tar archive extraction
tar = "0.4"
flate2 = "1.0"

# Regex for HTML parsing
regex.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
cache = ["moka"]
fasta = ["bio"]
healing = []
# Opt-in live integration tests (require network access)
integration-tests = []
# Opt-in live tests for external-binary clients (muscle, diamond)
live = []
