[package]
name = "aose-bio-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Hosts the bio-database typed tool set (bio_typed.rs, vendored from
# aose-tools) plus the `aose-bio-mcp` binary that serves them over MCP/stdio.
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

aose-core = { path = "../aose-core" }
aose-schemas = { path = "../aose-schemas" }
aose-mcp = { path = "../aose-mcp" }
aose-bio-apis = { path = "../aose-bio-apis" }

[[bin]]
name = "aose-bio-mcp"
path = "src/bin/aose-bio-mcp.rs"
