[package]
name = "aose-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# Trimmed to the tool subsystem only (tool.rs, trait_based_tool.rs, types.rs,
# error.rs). The dropped agent/protocol/provider/runtime/memory modules were the
# only users of reqwest/postgres/arc-swap/etc., so the closure here is small.
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

aose-schemas = { path = "../aose-schemas" }
